--- a/Nailhang.Web/Views/Home/About.cshtml
+++ b/Nailhang.Web/Views/Home/About.cshtml
@@ -4,3 +4,8 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+<address>
+    <a href="mailto:arkhivania@gmail.com">arkhivania</a>
+    <br>
+    www.multivox.ru<br>
+</address>
