--- a/Nailhang.Web/Views/Home/Index.cshtml
+++ b/Nailhang.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Nailhang.IndexBase.Module>
+﻿@model Nailhang.Web.Models.IndexModel
+
 @{
     ViewBag.Title = "Home Page";
 }
@@ -9,102 +10,19 @@
     @*<p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>*@
 </div>
 
+@using (Html.BeginForm())
+{
+    @Html.EditorFor(w => w.DisplaySettings, "DisplaySettings")
+    <input type="submit" value="Обновить" />
+}
+
 <div class="row">
     <div>
         <ul>
-            @foreach (var m in Model)
+            @foreach (var m in Model.Modules.OrderBy(w => w.Module.FullName))
             {                
                 <li>
-                    @{string nameSpace = @Nailhang.Web.Utils.StringUtils.GetNamespace(m.FullName);}
-                    <h2>@nameSpace</h2>
-                    <p class="module-description">
-                        @m.Description
-                    </p>
-
-                    <br/>
-
-                    @if(m.Interfaces != null && m.Interfaces.Length > 0) {
-                        <p>Интерфейсы:</p>
-                        <ul>
-                            @foreach (var i in m.Interfaces)
-                            { 
-                                <li>
-                                    <p class="interface-name">
-                                        @i.Name.Substring(nameSpace.Length + 1)
-                                    </p>
-                                    @if (!string.IsNullOrEmpty(i.Description))
-                                    {
-                                        <p class="interface-description">
-                                            @i.Description
-                                        </p>
-                                    }
-                                    
-                                    @if (i.Methods != null && i.Methods.Length > 0)
-                                    {
-                                        <p>Методы:</p>
-                                        <ul>
-                                            @foreach (var meth in i.Methods)
-                                            {
-                                                <li>
-                                                    <p class="method-name">@meth.MethodString</p>
-                                                    @if (meth.InvocationRestriction != null)
-                                                    {
-                                                        <p class="method-restriction">@meth.InvocationRestriction.Value</p>
-                                                    }
-                                                </li>
-                                            }
-                                        </ul>
-                                    }                                        
-                                </li>
-                            }
-                        </ul>
-                    }
-                    
-                    <br />
-
-                    @if (m.Objects != null && m.Objects.Length > 0)
-                    {
-                        <p><i>Объекты:</i></p>
-                        <ul>
-                            @foreach (var i in m.Objects)
-                            {
-                                <li>
-                                    <p>
-                                        @i.Name.Substring(nameSpace.Length + 1)
-                                    </p>
-                                    @if (!string.IsNullOrEmpty(i.Description))
-                                    {
-                                        <p class="interface-description">
-                                            @i.Description
-                                        </p>
-                                    }
-                                </li>
-                            }
-                        </ul>
-                    }
-                    
-                    <br/>
-
-                    @if (m.NamespaceDependencies != null && m.NamespaceDependencies.Length > 0)
-                    {
-                        <p><i>Зависимости:</i></p>
-                        <ul>
-                                @foreach (var nd in m.NamespaceDependencies)
-                                {
-                                    <li>
-                                        <p>@nd</p>
-                                    </li>
-                                }
-                        </ul>
-                    }
-
-                    <p class="little-text">
-                        Класс модуля: @m.FullName
-                        <br/>
-                        Сборка: @m.Assembly
-                    </p>
-
-                    <hr />
+                    @Html.Partial("~/Views/Module/ModuleView.cshtml", m)
                 </li>
             }
         </ul>
