--- a/Nailhang.Web/Views/Module/ModuleView.cshtml
+++ b/Nailhang.Web/Views/Module/ModuleView.cshtml
@@ -85,7 +85,7 @@
             <li>
                 @if (string.IsNullOrEmpty(nd.Module))
                 {
-                    <p>@nd.Name/</p>
+                    <p>@nd.Name</p>
                 }else
                 {
                     <p>
