--- a/Nailhang.Web/Views/Module/Index.cshtml
+++ b/Nailhang.Web/Views/Module/Index.cshtml
@@ -7,6 +7,8 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(w => w.Module.FullName)
+    @Html.Hidden("formUpdate", true)
     @Html.EditorFor(w => w.DisplaySettings, "DisplaySettings")
     <input type="submit" value="Обновить" />
 }
