--- a/Nailhang.Web/Views/Module/Index.cshtml
+++ b/Nailhang.Web/Views/Module/Index.cshtml
@@ -2,8 +2,7 @@
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>@Model.Namespace</h2>
+<br/>
 
 @using (Html.BeginForm())
 {
@@ -12,6 +11,11 @@
     @Html.EditorFor(w => w.DisplaySettings, "DisplaySettings")
     <input type="submit" value="Обновить" />
 }
+
+<h2>
+    @{string nameSpace = Model.Namespace;}
+    @nameSpace
+</h2>
 
 <div class="row">
     <div>
