--- a/Nailhang.Web/Views/Shared/_Layout.cshtml
+++ b/Nailhang.Web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Домой", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Карта модулей", "Map", "Home")</li>
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                 </ul>
             </div>
