Карта модулей показывается более-менее нормально

--- a/Nailhang.Web/Content/Site.css
+++ b/Nailhang.Web/Content/Site.css
@@ -60,3 +60,32 @@ textarea {
     font-size: x-small;
     color: darkred
 }
+
+.vertical-text {
+	display: inline-block;
+	overflow: hidden;
+	width: 1.5em;
+    font-size: small;
+}
+.vertical-text__inner {
+	display: inline-block;
+	white-space: nowrap;
+	line-height: 1.5;
+	transform: translate(0,100%) rotate(-90deg);
+	transform-origin: 0 0;
+}
+/* This element stretches the parent to be square
+   by using the mechanics of vertical margins  */
+.vertical-text__inner:after {
+	content: "";
+	display: block;
+	margin: -1.5em 0 100%;
+}
+
+.x-letter-allign {
+    text-align: center;
+}
+
+.map-table-row {
+    font-size: small;
+}
