--- a/Nailhang.Web/Views/Home/Map.cshtml
+++ b/Nailhang.Web/Views/Home/Map.cshtml
@@ -1,18 +1,12 @@
 ﻿@model Nailhang.Web.Models.IndexModel
 
-<script src="@Url.Content("~/Scripts/raphael-min.js")"></script>
-<script src="@Url.Content("~/Scripts/dracula_graffle.js")"></script>
-<script src="@Url.Content("~/Scripts/dracula_graph.js")"></script>
-<script src="@Url.Content("~/Scripts/dracula_algorithms.js")"></script>
-
-
 @{
     ViewBag.Title = "Map";
 }
 
 <h2>Карта модулей</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Map", "Home", FormMethod.Get))
 {
     @Html.Hidden("formUpdate", true)
     <br />
@@ -25,55 +19,52 @@
     <input type="submit" value="Обновить" />
 }
 
-<div id="canvas" class="draw-div"></div>
+<br/>
 
-<script type="text/javascript">
-        window.onload = function () {
+@{
+    var depModules = Model.ModulesWithDependencies.OrderBy(w => w.Module.Namespace).ToArray();
+}
 
-            var width = document.getElementById('canvas').offsetWidth;
-            var height = 800;
+<table class="table-bordered">
+    <thead>
+        <tr>
+            <th>
+            </th>
 
-            var g = new Graph();
-
-            @foreach (var m in Model.Modules)
+            @foreach (var m in depModules)
             {
-                foreach (var di in m.DependencyItems.Where(d => d.Module != null))
+                <th>
+                    <div class="vertical-text">
+                        <div class="vertical-text__inner" title="@m.Module.Description">
+                            @Html.ActionLink(m.Namespace, "Index", "Module", new { module = @m.Module.FullName }, null)
+                        </div>
+                    </div>
+                </th>
+            }
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var m in depModules.Select((w, index) => new { w, index }))
+        {
+            <tr>
+                <th>
+                    <div class="map-table-row">
+                        <div title="@m.w.Module.Description">
+                            @Html.ActionLink(m.w.Namespace, "Index", "Module", new { module = @m.w.Module.FullName }, null)
+                        </div>
+                    </div>
+                </th>
+                @foreach (var minner in depModules)
                 {
-                    <text>
-                    g.addEdge("@m.Module.FullName", "@di.Module");
-                    </text>
+                    if (m.w.DependencyItems.Where(w => w.Module != null && w.Module == minner.Module.FullName).Any())
+                    {
+                        <td class="x-letter-allign">X</td>
+                    }else
+                    { 
+                        <td class="x-letter-allign"></td>
+                    }
                 }
-
-            }
-
-            /* layout the graph using the Spring layout implementation */
-            var layouter = new Graph.Layout.Spring(g);
-            layouter.layout();
-
-            ///* draw the graph using the RaphaelJS draw implementation */
-
-            ///* calculating the shortest paths via Bellman Ford */
-            ////    bellman_ford(g, g.nodes["Berlin"]);
-
-            ///* calculating the shortest paths via Dijkstra */
-            //dijkstra(g, g.nodes["Berlin"]);
-
-            ///* calculating the shortest paths via Floyd-Warshall */
-            //floyd_warshall(g, g.nodes["Berlin"]);
-
-
-            /* colourising the shortest paths and setting labels */
-            for (e in g.edges) {
-                if (g.edges[e].target.predecessor === g.edges[e].source || g.edges[e].source.predecessor === g.edges[e].target) {
-                    g.edges[e].style.stroke = "#bfa";
-                    g.edges[e].style.fill = "#56f";
-                } else {
-                    g.edges[e].style.stroke = "#aaa";
-                }
-            }
-
-            var renderer = new Graph.Renderer.Raphael('canvas', g, width, height);
-            renderer.draw();
-        };
-
-</script>
+            </tr>
+        }
+    </tbody>
+</table>
