--- a/Nailhang.Web/Views/Shared/EditorTemplates/DisplaySettings.cshtml
+++ b/Nailhang.Web/Views/Shared/EditorTemplates/DisplaySettings.cshtml
@@ -16,5 +16,10 @@
     Отображать интерфейсы
 </div>
 
+<div>
+    @Html.EditorFor(x => x.CalcDependenciesWithChildNodes)
+    Учитывать зависимости дочерних узлов
+</div>
+
 
     
