--- a/Nailhang.Web/Views/Shared/_Layout.cshtml
+++ b/Nailhang.Web/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Домой", "Index", "Home")</li>
                     <li>@Html.ActionLink("Карта модулей", "Map", "Home")</li>
+                    <li>@Html.ActionLink("Элементы привязки", "Index", "Interfaces")</li>
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                 </ul>
             </div>
