--- a/Nailhang.Web/Views/Module/ModuleView.cshtml
+++ b/Nailhang.Web/Views/Module/ModuleView.cshtml
@@ -18,7 +18,7 @@
         {
             <li>
                 <p class="interface-name">
-                    @i.Name.Substring(nameSpace.Length + 1)
+                    @i.TypeReference.FullName.Substring(nameSpace.Length + 1)
                 </p>
                 @if (!string.IsNullOrEmpty(i.Description))
                 {
@@ -55,11 +55,11 @@
 {
     <p><i>Объекты:</i></p>
     <ul>
-        @foreach (var i in Model.Module.Objects.OrderBy(w => w.Name))
+        @foreach (var i in Model.Module.Objects.OrderBy(w => w.TypeReference.FullName))
         {
             <li>
                 <p>
-                    @i.Name.Substring(nameSpace.Length + 1)
+                    @i.TypeReference.FullName.Substring(nameSpace.Length + 1)
                 </p>
                 @if (!string.IsNullOrEmpty(i.Description))
                 {
@@ -118,6 +118,22 @@
         </li>
     }
 </ul>
+}
+
+@if (displaySettings.ShowBinds && Model.Module.ModuleBinds != null && Model.Module.ModuleBinds.Length > 0)
+{
+    <br />
+    <p><i>Модуль привязывает:</i></p>
+    <ul>
+        @foreach (var nd in Model.Module.ModuleBinds.OrderBy(w => w.FullName))
+        {
+            <li>
+                <p>
+                    @Html.ActionLink(nd.FullName, "Index", "Interface", new { interfaceHash = nd.FullName.ToMD5() }, null)
+                </p>
+            </li>
+        }
+    </ul>
 }
 
 
