--- a/Nailhang.Web/Views/Module/Index.cshtml
+++ b/Nailhang.Web/Views/Module/Index.cshtml
@@ -4,14 +4,14 @@
 }
 <br/>
 
-@using (Html.BeginForm())
+@*@using (Html.BeginForm())
 {
     @Html.HiddenFor(w => w.Module.FullName)
     @Html.Hidden("formUpdate", true)
-    { Html.RenderAction("RenderParameters", "Home"); }
-    Html.RenderPartial("~/Views/Home/DependenciesSettings.cshtml", (Nailhang.Web.Models.DisplaySettings)Session["DisplaySettings"]);
+    //{ Html.RenderAction("RenderParameters", "Home"); }
+    //Html.RenderPartial("~/Views/Home/DependenciesSettings.cshtml", (Nailhang.Web.Models.DisplaySettings)Session["DisplaySettings"]);
     <input type="submit" value="Обновить" />
-}
+}*@
 
 <h2>
     @{string nameSpace = Model.Namespace;}
