--- a/Nailhang.Web/Views/Shared/_Layout.cshtml
+++ b/Nailhang.Web/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Домой", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Карта модулей", "Map", "Home")</li>
+                    @*<li>@Html.ActionLink("Домой", "Index", "Home")</li>*@
+                    @*<li>@Html.ActionLink("Карта модулей", "Map", "Home")</li>*@
                     <li>@Html.ActionLink("Элементы привязки", "Index", "Interfaces")</li>
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                 </ul>
