--- a/Nailhang.Web/Views/Module/Index.cshtml
+++ b/Nailhang.Web/Views/Module/Index.cshtml
@@ -14,7 +14,7 @@
 }*@
 
 <h2>
-    @{string nameSpace = Model.Namespace;}
+    @{string nameSpace = Model.Module.FullName;}
     @nameSpace
 </h2>
 
