--- a/Nailhang.Web/Views/Shared/_Layout.cshtml
+++ b/Nailhang.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="~/lib/tether/dist/css/tether.css" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    @*<link rel="stylesheet" href="~/css/site.css" />*@
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body> 
     <nav class="navbar navbar-default navbar-static-top">
