--- a/Nailhang.Web/wwwroot/css/site.css
+++ b/Nailhang.Web/wwwroot/css/site.css
@@ -3,36 +3,89 @@
     padding-bottom: 20px;
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
+/* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
+/* Override the default bootstrap behavior where horizontal description lists 
+   will truncate terms that are too long to fit in the left column 
+*/
+.dl-horizontal dt {
+    white-space: normal;
+}
+
+/* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
 textarea {
     max-width: 280px;
 }
 
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
+.little-text {
+    font-size: 80%;
+    font-style: italic;
+    color: darkgrey;
 }
 
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"]
-{
-    width: 100%;
+.module-description {
+
 }
 
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-  /* Hide captions */
-  .carousel-caption {
-    display: none
-  }
+.interface-name {
+    font-weight: bold;
+}
+
+.module-columns {
+    -webkit-columns: 200px 2; /* Chrome, Safari, Opera */
+    -moz-columns: 200px 2; /* Firefox */
+    columns: 200px 2;
+    margin: 10px
+}
+
+.draw-div {
+    margin: 10px;
+}
+
+.method-name {
+    font-style: italic;
+}
+
+.interface-description {
+    
+}
+
+.method-restriction {
+    font-size: x-small;
+    color: darkred
+}
+
+.vertical-text {
+	display: inline-block;
+	overflow: hidden;
+	width: 1.5em;
+    font-size: small;
+}
+.vertical-text__inner {
+	display: inline-block;
+	white-space: nowrap;
+	line-height: 1.5;
+	transform: translate(0,100%) rotate(-90deg);
+	transform-origin: 0 0;
+}
+/* This element stretches the parent to be square
+   by using the mechanics of vertical margins  */
+.vertical-text__inner:after {
+	content: "";
+	display: block;
+	margin: -1.5em 0 100%;
+}
+
+.x-letter-allign {
+    text-align: center;
+}
+
+.map-table-row {
+    font-size: small;
 }
