--- a/Nailhang.Web/Views/Home/Index.cshtml
+++ b/Nailhang.Web/Views/Home/Index.cshtml
@@ -34,24 +34,27 @@
     </ul>
 </div>
 
-<div class="container">
-    <div>
-        <ul>
-            @foreach (var m in Model.Modules.OrderBy(w => w.Module.FullName))
-            {
-                <li>
-                    @{string nameSpace = m.Namespace;}
-                    <h2>
-                        @Html.ActionLink(@nameSpace, "Index", "Module", new { module = @m.Module.FullName }, null)
-                    </h2>
+<p class="interface-name">
+    Всего модулей: @Model.Modules.Count()
+</p>
 
-                    @Html.Partial("~/Views/Module/ModuleView.cshtml", m)
-                </li>
-                        }
-        </ul>
-    </div>
+    @*<div class="container">
+            <div>
+                <ul>
+                    @foreach (var m in Model.Modules.OrderBy(w => w.Module.FullName))
+                    {
+                        <li>
+                            @{string nameSpace = m.Namespace;}
+                            <h2>
+                                @Html.ActionLink(@nameSpace, "Index", "Module", new { module = @m.Module.FullName }, null)
+                            </h2>
 
-</div>
+                            @Html.Partial("~/Views/Module/ModuleView.cshtml", m)
+                        </li>
+                                }
+                </ul>
+            </div>
+        </div>*@
 
 
 
