--- a/Nailhang.Web/Views/Module/Index.cshtml
+++ b/Nailhang.Web/Views/Module/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Nailhang.Web.Models.ModuleModel
+﻿@model Nailhang.Web.Models.ModulePageModel
 @{
     ViewBag.Title = "Index";
 }
@@ -7,16 +7,32 @@
 <div class="jumbotron">
     <div class="container">
         <h2>
-            @{string nameSpace = Model.Module.FullName;}
+            @{string nameSpace = Model.Module.Module.FullName;}
             @nameSpace
         </h2>
+    </div>
+</div>
+
+<div class="row">
+    <div>
+        @Html.Partial("~/Views/Module/ModuleView.cshtml", Model.Module)
+    </div>
+</div>
+
+@if (Model.Changes.Any())
+{
+    <h2>История изменений</h2>
+    <div class="row">
+        <div>
+            <ul>
+                @foreach (var c in Model.Changes)
+                {
+                <li>
+                    @c.Count за месяц &emsp; @c.Month.Year/@c.Month.Month.ToString("d2") &emsp;  авторы: <b>@string.Join(", ", @c.Users)</b>
+                </li>
+                }
+            </ul>
         </div>
     </div>
-
-        <div class="row">
-            <div>
-                @Html.Partial("~/Views/Module/ModuleView.cshtml", Model)
-            </div>
-
-        </div>
+}
 
