--- a/Nailhang.Web/wwwroot/css/site.css
+++ b/Nailhang.Web/wwwroot/css/site.css
@@ -37,6 +37,13 @@ textarea {
     font-weight: bold;
 }
 
+.hot-module-columns {
+    -webkit-columns: 200px 2; /* Chrome, Safari, Opera */
+    -moz-columns: 200px 2; /* Firefox */
+    columns: 200px 2;
+    margin: 10px
+}
+
 .module-columns {
     -webkit-columns: 200px 2; /* Chrome, Safari, Opera */
     -moz-columns: 200px 2; /* Firefox */
