--- a/Nailhang.Blazor/Pages/Index.razor
+++ b/Nailhang.Blazor/Pages/Index.razor
@@ -3,7 +3,7 @@
 @using Nailhang.Blazor.Data
 @inject NailhangModulesService NailhangModulesService
 
-<h1>Список модулей</h1>
+<h1>Модули:</h1>
 
 @if (namespaces == null || loadedModules == null)
 {
@@ -11,38 +11,42 @@
 }
 else
 {
-    <div>
-        <p>Пространство имен</p>
-        <select @onchange="@UpdateModules">
-            @foreach (var ns in namespaces)
-            {
-                <option value=@ns>@ns</option>
-            }
-        </select>
+    <div class="panel panel-default">
+        <div class="panel-heading">Пространство имен:</div>
+        <div class="panel-body">
+            <select @onchange="@UpdateModules">
+                @foreach (var ns in namespaces)
+                {
+                    <option value=@ns>@ns</option>
+                }
+            </select>
+        </div>
     </div>
 
-    <h2>Модули</h2>
+    <br />
+
+
+    <p class="little-text">
+        Всего модулей: @loadedModules.Length
+    </p>
     <div class="module-columns">
 
         <ul>
             @foreach (var m in loadedModules.OrderBy(w => w.Module.FullName))
             {
                 <li title="@m.Module.Description">
-                    @m.Module.FullName
-                    @*@Html.ActionLink(m.Module.FullName, "Index", "Module", new { module = @m.Module.FullName }, null)*@
+                    <NavLink href=@("module/?module=" + @m.Module.FullName)>
+                        @m.Module.FullName
+                    </NavLink>
                 </li>
             }
         </ul>
     </div>
-
-    <p class="interface-name">
-        Всего модулей: @loadedModules.Length
-    </p>
 }
 
 @code {
     string[] namespaces;
-    
+
     Nailhang.Display.Models.ModuleModel[] loadedModules;
     string selectedNamespace = "";
 
