--- a/Nailhang.Blazor/wwwroot/css/site.css
+++ b/Nailhang.Blazor/wwwroot/css/site.css
@@ -8,6 +8,12 @@ a, .btn-link {
     color: #0366d6;
 }
 
+.little-text {
+    font-size: 80%;
+    font-style: italic;
+    color: darkgrey;
+}
+
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
